--- a/packages/templates/blog/package.json
+++ b/packages/templates/blog/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discordlink/template-blog",
+  "name": "@discolink/template-blog",
   "version": "0.1.0",
   "private": true,
   "type": "module",
