--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discordlink/bot",
+  "name": "@discolink/bot",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -17,7 +17,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@discordlink/db": "workspace:*",
+    "@discolink/db": "workspace:*",
     "discord.js": "^14.16.3",
     "dotenv": "^17.2.3",
     "zod": "^3.24.1"
