--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discordlink/www",
+  "name": "@discolink/www",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -7,7 +7,7 @@
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "deploy": "wrangler pages deploy dist --project-name discordlink-www"
+    "deploy": "wrangler pages deploy dist --project-name discolink-www"
   },
   "dependencies": {
     "astro": "^5.0.0"
