--- a/packages/www/wrangler.toml
+++ b/packages/www/wrangler.toml
@@ -1,5 +1,5 @@
-# Cloudflare Pages configuration for DiscordLink Marketing Site
-# Deploy with: wrangler pages deploy dist --project-name discordlink-www
+# Cloudflare Pages configuration for DiscoLink Marketing Site
+# Deploy with: wrangler pages deploy dist --project-name discolink-www
 
-name = "discordlink-www"
+name = "discolink-www"
 compatibility_date = "2024-01-01"
